2016-01-15 Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import libpng-1.6.21.
	* version.ac: Adjust.

2015-12-28 Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import libpng-1.6.20.
	* version.ac: Adjust.

2015-08-01 Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import libpng-1.6.18.
	* version.ac: Adjust.

2015-07-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Better dependencies for 'make check'.

2015-03-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import libpng-1.6.17.
	* version.ac: Adjust.

2015-02-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Use the fragment ../../am/dist_hook.am.

2014-12-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import libpng-1.6.16.
	* version.ac: Adjust.

2014-12-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Added KPSE_COMPILER_VISIBILITY.
	* Makefile.am [AM_CFLAGS]: Added $(VISIBILITY_CFLAGS).

2014-11-21  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import libpng-1.6.15.
	* version.ac: Adjust.

2014-10-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import libpng-1.6.14.
	* version.ac: Adjust.

2014-08-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import libpng-1.6.13.
	* version.ac: Adjust.

2014-06-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import libpng-1.6.12.
	* version.ac: Adjust.
	* Makefile.am: Drop the obsolete ACLOCAL_AMFLAGS.

2014-03-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import libpng-1.6.10.
	* version.ac: Adjust.

2014-02-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import libpng-1.6.9.
	* version.ac: Adjust.

2014-01-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import libpng-1.6.8.
	* version.ac: Adjust.

2012-07-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Use ../../am/reconfig.am and ../../am/rebuild.am.

2013-07-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* include/Makefile.am: Moved Makefile fragments to ../../am/.

2013-06-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import libpng-1.5.17.
	* version.ac: Adjust.
